--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
   box-sizing: border-box;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 html,
@@ -10,3 +10,62 @@ body {
 }
 
 /* Add styles here! */
+
+p {
+  font-size: 1.25rem;
+  padding: 0px 16px;
+}
+
+/* below is header section */
+
+.intro-chunk {
+  font-size: 1.25rem;
+}
+
+strong {
+  color: hsl(160deg, 100%, 30%);
+}
+
+header {
+  border-bottom: 8px solid hsl(0deg, 0%, 40%);
+  padding-bottom: 32px;
+}
+
+h1 {
+  margin-top: 48px;
+  padding-left: 16px;
+}
+
+h2 {
+  background-color: hsl(45deg, 100%, 50%);
+  border-bottom: 8px solid hsl(45deg, 100%, 40%);
+  width: fit-content;
+  padding: 16px 24px;
+  margin-left: -8px;
+  /* set margin-top as 7px because there is a 1px border-top on the parent container to prevent margin-collapse, and want to total 8px of spacing (7 + 1) */
+  margin-top: 7px;
+}
+
+/* below is content section */
+
+main {
+  background-color: hsl(0deg, 0%, 60%);
+  padding-top: 24px;
+  padding-bottom: 32px;
+}
+
+/* section {
+  height: 50%;
+} */
+
+.card {
+  background-color: hsl(0deg, 0%, 100%);
+  border-bottom: 8px solid hsl(0deg, 0%, 40%);
+  border-top: 1px solid hsl(0deg, 0%, 100%);
+}
+
+.max-width-wrapper {
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+}
